--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,9 @@ clap = { version = "4.5", features = ["derive"] }
 flate2 = { version = "1.1", features = ["zlib-rs"] }
 anyhow = "1.0"
 thiserror = "2.0"
-simd-minimizers = "1.3"
-packed-seq = "3.0"
+simd-minimizers.path = "../../simd-minimizers"
+packed-seq.path = "../../packed-seq"
+seq-hash.path = "../../seq-hash"
 rayon = "1"
 rustc-hash = "2.1.1"
 serde = { version = "1.0", features = ["derive"] }
