--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,4 +75,6 @@ strip = false
 debug = true
 
 [patch.crates-io]
-packed-seq = { git = 'https://github.com/rust-seq/packed-seq.git' }
+packed-seq = { git = 'https://github.com/rust-seq/packed-seq.git', rev = '09997c1' }
+seq-hash = { git = 'https://github.com/rust-seq/seq-hash.git', rev = '8ef9e15' }
+simd-minimizers = { git = 'https://github.com/rust-seq/simd-minimizers.git', rev = '3f3487f' }
