--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "deacon"
 version = "0.11.0"
-description = "Fast DNA sequence filtering with minimizers"
+description = "Fast DNA search and [host] depletion using minimizers"
 authors = ["Bede Constantinides <b@bede.im>"]
 edition = "2024"
 repository = "https://github.com/bede/deacon"
