--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bincode = { version = "2.0", features = ["serde"] }
 rapidhash = "4.1.0"
+rustc-hash = "2.1"
 parking_lot = "0.12"
 indicatif = "0.18"
 
@@ -52,6 +53,9 @@ rstest = "0.26"
 compression = ["zstd", "liblzma", "flate2", "needletail/compression", "paraseq/default"]
 # Use to still handle .gz files when "compression" is not enabled.
 gz = ["niffler/gz", "flate2", "flate2/default"]
+# Linguistic complexity implementation strategies (mutually exclusive)
+lc-naive = []
+lc-buffered = []
 default = ["compression"]
 
 [[test]]
