--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ paraseq = { version = "0.4.3", default-features = false, features = ["anyhow", "
 liblzma = { version = "0.3", optional = true }
 flate2 = { version = "1.1", features = ["zlib-rs"], optional = true }
 zstd = { version = "0.13", optional = true }
-gzp = { version = "0.11.3", default-features = false, features = ["deflate_rust"], optional = true }
+gzp = { version = "2.0.0", optional = true }
 
 [lints.clippy]
 too_many_arguments = "allow"
