Patch for gzp 2.0.1 fixing broken feature gating

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,3 +74,6 @@ codegen-units = 1
 panic = "abort"
 strip = false
 debug = false
+
+[patch.crates-io]
+gzp = {git = 'https://github.com/sstadick/gzp.git', branch='fix/gate_deflate_zlib_ng'}
