--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ liblzma = { version = "0.3", optional = true }
 flate2 = { version = "1.1", features = ["zlib-rs"], optional = true }
 zstd = { version = "0.13", optional = true }
 gzp = { version = "2.0", default-features = false, features = ["deflate_rust"], optional = true }
+ureq = { version = "3", optional = true }
 
 [lints.clippy]
 too_many_arguments = "allow"
@@ -53,7 +54,9 @@ rstest = "0.26"
 compression = ["zstd", "liblzma", "flate2", "gzp", "needletail/compression", "paraseq/default"]
 # Use to still handle .gz files when "compression" is not enabled.
 gz = ["niffler/gz", "flate2", "flate2/default"]
-default = ["compression"]
+# Enable fetching indexes from remote storage
+fetch = ["ureq"]
+default = ["compression", "fetch"]
 
 [[test]]
 name = "cli_tests"
