Use minreq with native TLS to avoid weird bioconda CI failure caused by rustls dep ring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ liblzma = { version = "0.3", optional = true }
 flate2 = { version = "1.1", features = ["zlib-rs"], optional = true }
 zstd = { version = "0.13", optional = true }
 gzp = { version = "2.0", default-features = false, features = ["deflate_rust"], optional = true }
-ureq = { version = "3", optional = true }
+minreq = { version = "2", features = ["https-native"], optional = true }
 
 [lints.clippy]
 too_many_arguments = "allow"
@@ -55,7 +55,7 @@ compression = ["zstd", "liblzma", "flate2", "gzp", "needletail/compression", "pa
 # Use to still handle .gz files when "compression" is not enabled.
 gz = ["niffler/gz", "flate2", "flate2/default"]
 # Enable fetching indexes from remote storage
-fetch = ["ureq"]
+fetch = ["minreq"]
 default = ["compression", "fetch"]
 
 [[test]]
