--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,12 @@
+[target.'cfg(target_arch="x86_64")']
+rustflags = ["-C", "target-cpu=x86-64-v3"]
+
+[target.'cfg(all(target_arch="aarch64", target_os="macos"))']
+rustflags = ["-C", "target-cpu=apple-a14"]
+
+[target.'cfg(all(target_arch="aarch64", not(target_os="macos")))']
+rustflags = ["-C", "target-cpu=generic"]
+
 [build]
+# Fallback
 rustflags = ["-C", "target-cpu=native"]
