--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ flate2 = { version = "1.1", features = ["zlib-rs"], optional = true }
 zstd = { version = "0.13", optional = true }
 gzp = { version = "2.0", default-features = false, features = ["deflate_rust"], optional = true }
 minreq = { version = "2", features = ["https-rustls-probe"], optional = true }
+ensure_simd = "0.1.0"
 
 [lints.clippy]
 too_many_arguments = "allow"
